welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: not found: type int
	var presence : int = 0;
                       ^Program:15: error: type mismatch;
 found   : Unit
 required: Boolean
	if(presence = 2){
                    ^